[package]
name = "simple-delay-queue"
version = "0.1.0"
edition = "2024"
description = "A simple delay queue for Tokio"
keywords = ["delay", "queue", "tokio"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["time"] }
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
futures-util = "0.3"
